# EHMbrAIn

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
conf/: cfm56_7b_targets.yaml  econ_assumptions.yaml  fault_catalog.yaml
dashboard/: app.py
docs/: engineering-norms.md  f1-model-spec.md  f10-proposal.md  f7-proposal.md  prereg-v1.md  prereg-v10.md  prereg-v11.md  prereg-v12.md  prereg-v13.md  prereg-v14.md  prereg-v2.md  prereg-v3.md  prereg-v5.md  prereg-v6.md  prereg-v7.md  prereg-v8.md  prereg-v9.md  syncfm56-datasheet.md
paper/memoria/: memoria.tex  referencias.bib
paper/onepager/: EHMbrAIn.tex  onepager.tex
scripts/: audit_dataset.py  audit_nonlinearity.py  audit_v2_fidelity.py  benchmark_pipeline.py  cea_crosscheck.py  dump_optuna_history.py  econ_impact.py  f10_certificate.py  f11_prognostic_floor.py  f5_confirm.py  f7_learner.py  f7_observability.py  f8_l4_recoverable.py  f8_l5_arch.py  f8_l6_hybrid.py  f8_l7_drift.py  f8_l9_pcs.py  f8_lh2_wall.py  f8_lrul_advanced.py  f8_surrogate.py  f8_surrogate_data.py  f_icm_robustness.py  f_noise_sweep.py  f_ops_conversion.py  fig_isolation.py  fig_rul_distribution.py  gpa_study.py  make_case_studies.py  make_corrected_baseline.py  make_decks.py  make_fleet.py  make_icm.py  make_memoria_assets.py  make_report_assets.py  run_ai.py  run_anchors.py  run_design_point.py  run_hybrid.py  run_pcs.py  run_trad.py  (+3 more)
tests/: test_ai.py  test_corrections.py  test_design_point.py  test_icm_physics.py  test_od_anchors.py  test_smoke_pycycle.py  test_snapshots.py  test_trad.py  test_trajectories.py
(+98 files in other folders)
