[project]
name = "ehmbrain"
version = "0.1.0"
description = "AI-based vs traditional Engine Health Monitoring (gas path analysis) on a synthetic CFM56-7B fleet"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy<2",
    "om-pycycle>=4.4.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "shap>=0.49.1",
    "torch>=2.12.1",
]

[project.scripts]
ehmbrain = "ehmbrain:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.1.1",
]
